--- a/app/ui/templates/claim-content.html
+++ b/app/ui/templates/claim-content.html
@@ -59,312 +59,90 @@
                         </div>
                     </div>
                     <div class="panel-body pn">
+                    <span>
+                    </span>
                         <table class="table table-striped table-hover" id="datatable3" cellspacing="0" width="100%">
                             <thead>
                                 <tr>
+                                	<th>
+                                		#
+                                	</th>
+                                	<th>
+                                		Claim Number
+                                	</th>
                                     <th>
-                                        Name
+                                       Vehicle Number
                                     </th>
                                     <th>
-                                        Position
+                                        Owner Name
                                     </th>
                                     <th>
-                                        Office
+                                        Insurance
                                     </th>
                                     <th>
-                                        Age
+                                        Claim Type
                                     </th>
                                     <th>
-                                        Start date
+                                       Date Reported
                                     </th>
                                     <th>
-                                        Salary
+                                        Status
                                     </th>
                                 </tr>
                             </thead>
-                            <tfoot>
+                           <!-- <tfoot>
                                 <tr>
+                                	<th>
+                                	
+                                	</th>
                                     <th>
-                                        Name
+                                       Vehicle Number
                                     </th>
                                     <th>
-                                        Position
+                                        Owner Name
                                     </th>
                                     <th>
-                                        Office
+                                        Insurance
                                     </th>
                                     <th>
-                                        Age
+                                        Claim Type
                                     </th>
                                     <th>
-                                        Start date
+                                       Date Reported
                                     </th>
                                     <th>
-                                        Salary
+                                       
                                     </th>
                                 </tr>
-                            </tfoot>
+                            </tfoot> -->
                             <tbody>
-                                <tr>
+                            <repeat group="{{@page.claim_data}}" value="{{ @item }}">	
+                                <tr>   
+                                	<td>{{@counter=@counter+1}}</td>
+                                	                       
+                                	<td><a href="">{{@item.claimNo}}</a></td>                       
                                     <td>
-                                        Tiger Nixon
+                                        {{@item.vehicleId.registrationNo}}
                                     </td>
                                     <td>
-                                        System Architect
+                                        {{@item.ownerId.firstName.' '.@item.ownerId.lastName}}
                                     </td>
                                     <td>
-                                        Edinburgh
+                                        {{@item.insuranceId.name}}
                                     </td>
                                     <td>
-                                        61
+                                        {{@item.claimTypeId.name}}
                                     </td>
                                     <td>
-                                        2011/04/25
+                                 
+                                        {{'{0,date}', strtotime(@item.dateCreated) | format }}
+                                        {{'{0,time}', strtotime(@item.dateCreated) | format }}
                                     </td>
-                                    <td>
-                                        $320,800
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Cedric Kelly
-                                    </td>
-                                    <td>
-                                        Senior Javascript Developer
-                                    </td>
-                                    <td>
-                                        Edinburgh
-                                    </td>
-                                    <td>
-                                        22
-                                    </td>
-                                    <td>
-                                        2012/03/29
-                                    </td>
-                                    <td>
-                                        $433,060
+                                    <td>	                            
+		                                <a href="{{ @item.stageId.link}}" class="{{ @item.stageId.class}}">{{@item.stageId.name}}</a>	                                                                	
                                     </td>
                                 </tr>
-                                <tr>
-                                    <td>
-                                        Brielle Williamson
-                                    </td>
-                                    <td>
-                                        Integration Specialist
-                                    </td>
-                                    <td>
-                                        New York
-                                    </td>
-                                    <td>
-                                        61
-                                    </td>
-                                    <td>
-                                        2012/12/02
-                                    </td>
-                                    <td>
-                                        $372,000
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Sonya Frost
-                                    </td>
-                                    <td>
-                                        Software Engineer
-                                    </td>
-                                    <td>
-                                        Edinburgh
-                                    </td>
-                                    <td>
-                                        23
-                                    </td>
-                                    <td>
-                                        2008/12/13
-                                    </td>
-                                    <td>
-                                        $103,600
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Quinn Flynn
-                                    </td>
-                                    <td>
-                                        Support Lead
-                                    </td>
-                                    <td>
-                                        Edinburgh
-                                    </td>
-                                    <td>
-                                        22
-                                    </td>
-                                    <td>
-                                        2013/03/03
-                                    </td>
-                                    <td>
-                                        $342,000
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Haley Kennedy
-                                    </td>
-                                    <td>
-                                        Senior Marketing Designer
-                                    </td>
-                                    <td>
-                                        London
-                                    </td>
-                                    <td>
-                                        43
-                                    </td>
-                                    <td>
-                                        2012/12/18
-                                    </td>
-                                    <td>
-                                        $313,500
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Tatyana Fitzpatrick
-                                    </td>
-                                    <td>
-                                        Regional Director
-                                    </td>
-                                    <td>
-                                        London
-                                    </td>
-                                    <td>
-                                        19
-                                    </td>
-                                    <td>
-                                        2010/03/17
-                                    </td>
-                                    <td>
-                                        $385,750
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Michael Silva
-                                    </td>
-                                    <td>
-                                        Marketing Designer
-                                    </td>
-                                    <td>
-                                        London
-                                    </td>
-                                    <td>
-                                        66
-                                    </td>
-                                    <td>
-                                        2012/11/27
-                                    </td>
-                                    <td>
-                                        $198,500
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Paul Byrd
-                                    </td>
-                                    <td>
-                                        Chief Financial Officer (CFO)
-                                    </td>
-                                    <td>
-                                        New York
-                                    </td>
-                                    <td>
-                                        64
-                                    </td>
-                                    <td>
-                                        2010/06/09
-                                    </td>
-                                    <td>
-                                        $725,000
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Gloria Little
-                                    </td>
-                                    <td>
-                                        Systems Administrator
-                                    </td>
-                                    <td>
-                                        New York
-                                    </td>
-                                    <td>
-                                        59
-                                    </td>
-                                    <td>
-                                        2009/04/10
-                                    </td>
-                                    <td>
-                                        $237,500
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Bradley Greer
-                                    </td>
-                                    <td>
-                                        Software Engineer
-                                    </td>
-                                    <td>
-                                        London
-                                    </td>
-                                    <td>
-                                        41
-                                    </td>
-                                    <td>
-                                        2012/10/13
-                                    </td>
-                                    <td>
-                                        $132,000
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Dai Rios
-                                    </td>
-                                    <td>
-                                        Personnel Lead
-                                    </td>
-                                    <td>
-                                        Edinburgh
-                                    </td>
-                                    <td>
-                                        35
-                                    </td>
-                                    <td>
-                                        2012/09/26
-                                    </td>
-                                    <td>
-                                        $217,500
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
-                                        Jenette Caldwell
-                                    </td>
-                                    <td>
-                                        Development Lead
-                                    </td>
-                                    <td>
-                                        New York
-                                    </td>
-                                    <td>
-                                        30
-                                    </td>
-                                    <td>
-                                        2011/09/03
-                                    </td>
-                                    <td>
-                                        $345,000
-                                    </td>
-                                </tr>
+                            </repeat>
                             </tbody>
                         </table>
                     </div>
