Refining work after review

--- a/app/ui/templates/dash-content.html
+++ b/app/ui/templates/dash-content.html
@@ -4,7 +4,7 @@
             <!-- Dashboard Tiles -->
             <div class="row mb10" id="spy1">
               <div class="col-sm-4 col-md-3">
-                <div class="bs-component">
+                <div class="bs-component1">
                   <div class="panel panel-tile bg-primary light">
                     <div class="panel-body pn pl20 p20" >
                       <i class="fa fa-th icon-bg"></i>
@@ -17,7 +17,7 @@
                 </div>
               </div>
               <div class="col-sm-4 col-md-3">
-                <div class="bs-component">
+                <div class="bs-component1">
                   <div class="panel panel-tile bg-warning light">
                     <div class="panel-body pn pl20 p20">
                       <i class="fa fa-exclamation icon-bg"></i>
@@ -30,7 +30,7 @@
                 </div>
               </div>
               <div class="col-sm-4 col-md-3">
-                <div class="bs-component">
+                <div class="bs-component1">
                   <div class="panel panel-tile bg-success light">
                     <div class="panel-body pn pl20 p20">
                       <i class="fa fa-check icon-bg"></i>
@@ -43,7 +43,7 @@
                 </div>
               </div>
               <div class="col-sm-4 col-md-3">
-                <div class="bs-component">
+                <div class="bs-component1">
                   <div class="panel panel-tile bg-danger light">
                     <div class="panel-body pn pl20 p20">
                       <i class="fa fa-times icon-bg"></i>
