--- a/app/ui/templates/includes/forms-bottom-scripts.html
+++ b/app/ui/templates/includes/forms-bottom-scripts.html
@@ -2,6 +2,7 @@
   <base href="{{@SCHEME.'://'.@HOST.@BASE.'/'}}"/>
   <script src="app/ui/assets/admin-tools/admin-forms/js/jquery.validate.min.js"></script>
   <script src="app/ui/assets/admin-tools/admin-forms/js/jquery.steps.min.js"></script>
+  <script src="app/ui/js/pureJSCalendar.js"></script>
   <script type="text/javascript">
   jQuery(document).ready(function() {
 
@@ -11,7 +12,7 @@
     Core.init();
 
     // Init Demo JS     
-    //Demo.init();
+    Demo.init();
 
     // Form Wizard 
     var form = $("#form-wizard");
