--- a/app/ui/templates/includes/forms-top-css.html
+++ b/app/ui/templates/includes/forms-top-css.html
@@ -1,2 +1,3 @@
   <!-- Admin Forms CSS -->
   <link rel="stylesheet" type="text/css" href="assets/admin-tools/admin-forms/css/admin-forms.css">
+  <link rel="stylesheet" href="app/ui/css/calendar.css">
